fixed header spacing on mobile

--- a/style.css
+++ b/style.css
@@ -423,7 +423,7 @@ td, th {
     }
   header {
     padding: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 10px;
   }
   h2 {
     font-size: 2.4rem;
